--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="priority_low">Low</string>
     <string name="priority_high">High</string>
     <string name="priority_medium">Medium</string>
+    <string name="push_title">I am reminding you for</string>
 </resources>
